avoid overflow

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -45,6 +45,7 @@ section[role="main"] {
     list-style: none;
     margin: 0;
     padding: 0;
+    overflow: scroll;
     li {
       padding: 0.5em 0;
     }
